@@ -40,6 +40,7 @@ import org.sakaiproject.tool.assessment.data.ifc.assessment.AnswerIfc;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.AssessmentIfc;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.ItemMetaDataIfc;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.ItemTextIfc;
+import org.sakaiproject.tool.assessment.data.ifc.shared.TypeIfc;
 import org.sakaiproject.tool.assessment.facade.AgentFacade;
 import org.sakaiproject.tool.assessment.facade.ItemFacade;
 import org.sakaiproject.tool.assessment.facade.TypeFacade;
@@ -188,13 +189,16 @@ public class ItemModifyListener implements ActionListener
       populateMetaData(itemauthorbean, itemfacade, bean);
 
       if (new Long(itemauthorbean.getItemType()).equals(TypeFacade.MATCHING)) {
-        populateItemTextForMatching(itemauthorbean, itemfacade, bean);
+    	  populateItemTextForMatching(itemauthorbean, itemfacade, bean);
       }
       else if (Long.valueOf(itemauthorbean.getItemType()).equals(TypeFacade.EXTENDED_MATCHING_ITEMS)) {
     	  populateItemTextForEMI(itemauthorbean, itemfacade, bean);
       }
+      else if (new Long(itemauthorbean.getItemType()).equals(TypeFacade.MATRIX_CHOICES_SURVEY)){
+    	  populateItemTextForMatrix(itemauthorbean, itemfacade, bean);
+      }
       else {
-        populateItemText(itemauthorbean, itemfacade, bean);
+    	  populateItemText(itemauthorbean, itemfacade, bean);
       }
 
       // attach item attachemnt to itemAuthorBean
@@ -247,26 +251,27 @@ public class ItemModifyListener implements ActionListener
                 case 11:
                     itemauthorbean.setItemTypeString("Fill In Numeric");  //  need to get it from properties file
                     nextpage = "fillInNumericItem";
-                    break;
-
-                //gopalrc - added 18 Nov 2009    
-                case 13:
-                    itemauthorbean.setItemTypeString("Extended Matching Items");  //  need to get it from properties file
-                    nextpage = "emiItem";
-                    break;
-
-                    
+                    break;                    
                 case 9:
                         itemauthorbean.setItemTypeString("Matching");  //  need to get it from properties file
-			MatchItemBean matchitem = new MatchItemBean();
+                        MatchItemBean matchitem = new MatchItemBean();
                         bean.setCurrentMatchPair(matchitem);
                         nextpage = "matchingItem";
                         break;
                 case 10:
                         itemauthorbean.setItemTypeString("Importing from Question Pool");
- //  need to get it from properties file
+                        // need to get it from properties file
                         nextpage = "poolList";
                         break;
+                case 13:
+                	    itemauthorbean.setItemTypeString("Matrix Choices Survey");  //  need to get it from properties file
+                	    nextpage = "matrixChoicesSurveyItem";
+                	    break;
+                //gopalrc - added 18 Nov 2009    
+                case 14:
+                	itemauthorbean.setItemTypeString("Extended Matching Items");  //  need to get it from properties file
+                	nextpage = "emiItem";
+                	break;
         }
     }
     catch(RuntimeException e)
@@ -540,7 +545,6 @@ public class ItemModifyListener implements ActionListener
 
   }
 
-
   //gopalrc - Aug 2010
   private void populateItemTextForEMI(ItemAuthorBean itemauthorbean, ItemFacade itemfacade, ItemBean bean)  {
 	  if (!Long.valueOf(itemauthorbean.getItemType()).equals(TypeFacade.EXTENDED_MATCHING_ITEMS)) return;
@@ -651,8 +655,33 @@ public class ItemModifyListener implements ActionListener
 
 
   
-  
-  
+  private void populateItemTextForMatrix(ItemAuthorBean itemauthorbean, ItemFacade itemfacade, ItemBean bean){
+	  Set itemtextSet = itemfacade.getItemTextSet();
+	  Iterator iter = itemtextSet.iterator();    
+
+	  StringBuffer rowChoices = new StringBuffer();
+	  while (iter.hasNext()){
+		  ItemTextIfc  itemText = (ItemTextIfc) iter.next();
+		  if (!"".equals(itemText.getText())){
+			  rowChoices = rowChoices.append(itemText.getText());
+			  rowChoices = rowChoices.append(System.getProperty("line.separator"));
+		  }
+		  Set answerSet = itemText.getAnswerSet();
+		  Iterator iter1 = answerSet.iterator();
+		  StringBuffer columnChoices = new StringBuffer();
+		  while (iter1.hasNext()){
+			  AnswerIfc answer = (AnswerIfc) iter1.next();
+			  if (!"".equals(answer.getText())){
+				  columnChoices = columnChoices.append(answer.getText());
+				  columnChoices = columnChoices.append(System.getProperty("line.separator"));
+			  }
+		  }
+		  bean.setColumnChoices(columnChoices.toString());
+	  } 
+	  bean.setRowChoices(rowChoices.toString()); 
+	  bean.setItemText(itemfacade.getText());
+  }
+
  private void populateItemTextForMatching(ItemAuthorBean itemauthorbean, ItemFacade itemfacade, ItemBean bean)  {
 
     Set itemtextSet = itemfacade.getItemTextSet();
@@ -739,23 +768,42 @@ public class ItemModifyListener implements ActionListener
          } 
        }
 
-	// get settings for case sensitivity for fib 
-        // If metadata doesn't exist, by default it is false. 
+       // get settings for case sensitivity for fib 
+       // If metadata doesn't exist, by default it is false. 
        if (meta.getLabel().equals(ItemMetaDataIfc.CASE_SENSITIVE_FOR_FIB)){
-	 //bean.setCaseSensitiveForFib((new Boolean(meta.getEntry())).booleanValue());
-	 bean.setCaseSensitiveForFib(Boolean.valueOf(meta.getEntry()).booleanValue());
+    	   bean.setCaseSensitiveForFib(Boolean.valueOf(meta.getEntry()).booleanValue());
        }
 
-	// get settings for mutually exclusive for fib. 
-        // If metadata doesn't exist, by default it is false. 
+       // get settings for mutually exclusive for fib. 
+       // If metadata doesn't exist, by default it is false. 
        if (meta.getLabel().equals(ItemMetaDataIfc.MUTUALLY_EXCLUSIVE_FOR_FIB)){
-	 //bean.setMutuallyExclusiveForFib((new Boolean(meta.getEntry())).booleanValue());
-	 bean.setMutuallyExclusiveForFib(Boolean.valueOf(meta.getEntry()).booleanValue());
+    	   bean.setMutuallyExclusiveForFib(Boolean.valueOf(meta.getEntry()).booleanValue());
        }
        
-       
+       // If metadata doesn't exist, by default it is false. 
+       if (meta.getLabel().equals(ItemMetaDataIfc.MUTUALLY_EXCLUSIVE_FOR_FIB)){
+    	   bean.setMutuallyExclusiveForFib(Boolean.valueOf(meta.getEntry()).booleanValue());
+       }
 
-	// get part id for the item
+       // get settings for add_to_favorites for matrix 
+       // If metadata doesn't exist, by default it is false. 
+       if (meta.getLabel().equals(ItemMetaDataIfc.ADD_TO_FAVORITES_MATRIX)){
+    	   bean.setAddToFavorite(Boolean.valueOf(meta.getEntry()).booleanValue());
+       }
+       if (meta.getLabel().equals(ItemMetaDataIfc.ADD_COMMENT_MATRIX)){
+    	   bean.setAddComment(Boolean.valueOf(meta.getEntry()).booleanValue());
+       }
+       if (meta.getLabel().equals(ItemMetaDataIfc.FORCE_RANKING)){
+    	   bean.setForceRanking(Boolean.valueOf(meta.getEntry()).booleanValue());
+       }
+       if (meta.getLabel().equals(ItemMetaDataIfc.MX_SURVEY_QUESTION_COMMENTFIELD)){
+    	   bean.setCommentField(meta.getEntry());
+       }
+       if (meta.getLabel().equals(ItemMetaDataIfc.MX_SURVEY_RELATIVE_WIDTH)){
+    	   bean.setRelativeWidth(Integer.valueOf(meta.getEntry()).intValue());
+       }
+
+       // get part id for the item
        if (meta.getLabel().equals(ItemMetaDataIfc.PARTID)){
     	   // Because the PARTID in sam_publisheditemmetadata_t is not correct,
     	   // get it from itemfacade instead
